--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -9,3 +9,8 @@ bBlueprintIsNotBlueprintType= true
 
 [/Script/AdvancedPreviewScene.SharedProfiles]
 
+[/Script/PlasticSourceControl.PlasticSourceControlProjectSettings]
+UserNameToDisplayName=(("blend", ""))
+bHideEmailDomainInUsername=True
+bPromptForCheckoutOnChange=True
+
